2000-06-19  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_boxc.c: fixed one very-infrequently striking lockout
	during shutdown

	* README.docbook: user --disable-docs, not --without-docs

2000-06-19  Derry Hamilton <rasilon@tardis.ed.ac.uk>

        * gw/wsp-session.c: included limits.h to get LONG_MAX
	* gwlib/utils.c,gwlib/utils.h: created kannel_cfmakeraw()
	* gw/smsc_emi.c: removed cfmakeraw stub
	* gw/smsc_emi.c,gw/smsc_at.c,gw/smsc_sema.c: converted calls to
	  cfmakeraw to kannel_cfmakeraw.

2000-06-19  Kalle Marjola  <rpr@wapit.com>

	* gw/wsp-session.c, gw/wsp_pdu.c: inserted patch from Joergz
	Pommnitz, now Kannel hopefully works better with Motorola
	Timeport.

2000-06-19  Kalle Marjola  <rpr@wapit.com>

	* gwlib/http.c: parse_url() modified to change start of the url
	tolower() so that comprasion to http:// succeeds even with
	HTTP://

2000-06-19  Kalle Marjola  <rpr@wapit.com>

	* gw/bb_smsc.c: added suspend-mode to sms_router to synchronize
	start-up

2000-06-19  Yann Muller  <ymuller@3glab.com>

	* gw/smsc.c, gw/smsc_p.h, gw/smsc_at.c: Applied Denis Hennessy's
	patch to support Siemens M20: connect at 19200 baud, added a 
	'pin = xxxx' entry to the conf file,  fixed missing trailing null char
	in encode_pdu, added a dummy receiver address since smsbox requires one,
	added the dummy "00" SC prefix for the M20 (like the wavecom).

2000-06-17  Richard Braakman  <dark@wapit.com>

	* Replaced capabilities parsing.  New file gw/wsp_caps.[ch] defines
	a structure to represent capabilities, and some operations on it.
	WSP layer passes capability requests up to the Application layer,
	which can respond to some and ignore others.  WSP layer then completes
	the capabilities reply when it generates the ConnectReply PDU.
	See negotiate_capabilities() function in wap-appl.c for more info.

	* Added CAPABILITIES type to wap-events and wsp-session-machine.

	* Added request_caps and reply_caps fields to WSP session machine,